style: apply openrewrite and spotless